# eloftr2cpp2

./: .gitignore
cpp_code/: CMakeLists.txt  LoFTRMatching.cpp  LoFTRMatching.h
mytest/: einsum_test.py  pair_test.py  test_model.py  testrearange.py
scripts/reproduce_test/: indoor_full_time.sh
src/loftr/: loftr.py
src/loftr/backbone/: __init__.py  backbone.py  repvgg.py
src/loftr/loftr_module/: fine_preprocess.py  linear_attention.py  transformer.py
src/loftr/utils/: coarse_matching.py  fine_matching.py  position_encoding.py
